--- a/Assignment2/Assignment2.tex
+++ b/Assignment2/Assignment2.tex
@@ -22,30 +22,13 @@
 \newcommand{\cred}[1]{{\color{red}#1}}
 \newcommand{\cblue}[1]{{\color{blue}#1}}
 
-\usepackage{xcolor}
-\usepackage{textcomp}
-\usepackage{listings}
-\lstdefinestyle{ccode}{
-  belowcaptionskip=1\baselineskip,
-  breaklines=true,
-  frame=L,
-  xleftmargin=\parindent,
-  language=C,
-  showstringspaces=false,
-  basicstyle=\footnotesize\ttfamily,
-  keywordstyle=\bfseries\color{green!40!black},
-  commentstyle=\itshape\color{purple!40!black},
-  identifierstyle=\color{blue},
-  stringstyle=\color{orange},
-}
-
 \usepackage{hyperref}
 \usepackage{geometry}
 
 \def\name{Group 11-05}
 
 %pull in the necessary preamble matter for pygments output
-\input{pygments.tex}
+
 %% The following metadata will show up in the PDF properties
 \hypersetup{
   colorlinks = true,
@@ -58,152 +41,165 @@
 }
 
 \begin{document}
+
 \begin{titlepage}
-    \begin{center}
-        \vspace*{3.5cm}
-
-        \textbf{Group 11-05: Daniel Schroeder, Brian Ozarowicz, and Luke Morrison}
-
-        \vspace{0.5cm}
-
-        \textbf{Assignment II: I/O Elevators}
-
-        \vspace{0.8cm}
-
-        CS 444 Operating Systems II\\
-        Spring 2017\\
-        4 May 2017\\
-
-        \vspace{1cm}
-
-        \textbf{Abstract}\\
-
-        \vspace{0.5cm}
-			
-			This document is a summary of Assignment 2 for CS 444 Operating Systems II at Oregon State University Spring 2017. This document includes a log of commands used to complete the kernel assignment, a description of the concurrency assignment solution from Group 11-05, and the responses to the concurrency assignment follow up questions.\\
-
-        \vfill
-
-    \end{center}
+\centering
+{\Large Group 11-05: Daniel Schroeder, Brian Ozarowicz, and Luke Morrison\par}
+\vspace{1cm}
+{\scshape\Large CS 444 Operating Systems II\par}
+{\scshape\Large Spring 2017\par}
+\vspace{1cm}
+{\huge\bfseries Assignment II: I/O Elevators\par}
+\vspace{2cm}
+\begin{abstract}
+This document is a summary of Assignment 2 for CS 444 Operating Systems II at Oregon State University Spring 2017. This document includes the design and implementation of the kernel assignment, responses to the reflection questions for the kernel and concurrency assignments, and a work log.
+\end{abstract}
 \end{titlepage}
-
 
 \section{Kernel Assignment}
 \bigskip
 
-BLAH BLAH BLAH ABOUT KERNEL ASSIGNMENT\\
-\bigskip
-\lstinputlisting[caption=The new sstf\_add\_request() function in sstf-iosched.c, language=c, style=ccode]{codeforwriteup.c}
-
-\pagebreak
-
-\section{Concurrency Assignment}
-\bigskip
-
-\noindent\textbf{Write-up}
+\noindent\textbf{Design}
 \medskip
 
 \medskip
 
-\noindent Our concurrency solution implemented pthreads and multithreading to solve a producer/consumer style problem. The problem: with a buffer of size 32, have producers add items (structs with int value number and int value wait time) to the buffer. The producers must wait a random number of seconds (time to produce) and also wait if the buffer is full. The consumers take the items from the buffer, sleeping for the time given in the buffer item struct's wait value, and blocking if the buffer is empty. To do this we implemented mutexes, pthread conditions, and concurrent programming.\par
-\medskip
-
-\medskip
-
-\noindent Our producers, once the thread is created, get a random number using either rdrand from x86 assembly instructions or the implemented mt19937 function and sleep for that amount of time (the time it takes to produce). When done sleeping the thread will lock the mutex which gives it exclusive access to the buffer. It then enters a loop to see if there are any available indexes in the buffer. If the buffer is full the producer thread waits for a consumer to throw the pthread condition for "full" meaning a consumer has opened up a space on the buffer. Once it is able to add its item to the buffer it throws a pthread condition "empty" to signal that the buffer is no longer empty, prints out the number, waits the time for the item it is adding, unlocks the mutex, and exits.\par
-\medskip
-
-\medskip
-
-\noindent Similarly, our consumer threads lock the mutex and enter a loop checking for an item in the buffer to consume. If the buffer is empty it will wait for a producer thread to throw a pthread condition that the buffer is no longer empty. Once there is an available item in the buffer the consumer stores its number and wait time in local variables and sets both struct fields to -1 (implying it is now an empty space) and unlocks the mutex. The consumer then waits the given amount of time, prints a message that it has consumed the specified number, then exits.\par
-\medskip
-
-\medskip
-
-\noindent Our main function mallocs enough size for the buffer and thread arrays, checks to see if rdrand is available to use, and initializes the mutex and pthread conditions. It then uses for loops to create and pthread\_join all the threads and wait for them to exit. The pthread condition variables allow the threads to synchronize by locking and unlocking the mutex until the specified condition is satisfied.\par
-\medskip
-
-\medskip
-
-\noindent The program accepts a command line parameter as the number of threads to produce. If the program is executed with \texttt{./concurrency1 100} it will create 100 producer and 100 consumer threads. On our own local machines this program works for N \textgreater 1000 threads, but on os-class it segfaults after about 240 threads, which we assume to be due to limitations on server permissions to mediate the amount of threads a single user can produce.\par
-\bigskip
+\noindent The design for implementing our scheduling algorithm was to modify the existing noop ioscheduler so that instead of queueing and dispatching requests first come first served with no consideration of sector number it instead followed the C-LOOK method of servicing requests in sector order until there are no more in the queue the direction it is looking and then starts over at the beginning of the queue. To achieve this behavior all that was required was to change the add behavior of the noop scheduler. Requests were originally simply added to the end of the queue and the dispatch function serviced them from the front. We changed the queue to use an insertion sort to maintain pending requests in order by sector number.\par
 
 \bigskip
 
 \noindent\textbf{What do you think the main point of this assignment is?}
 \medskip
 
-\noindent The main point of the assignment was to gain more experience with dealing with potential race conditions and how to allocate processing time to different threads. To deal with with race conditions, we were expected to write a semaphore implementation or to use mutexes to make sure critical variables are only being manipulated by a single thread at a time. As an extra, this assignment was also about giving unique information to different threads, as each had to be aware which fork was to the ``left" and ``right" of each thread.
 \medskip
+
+\noindent The point of this assignment was for us to understand how various Linux schedulers operate and how their behavior can be modified based on what approach is most efficient for the current system. It also got us familiar with how the data structures used by the schedulers are designed and how they interact, as well as how linked lists work in Linux. The assignment also gave us experience in many technical aspects such as coding and compiling kernel files, how to instruct qemu to use those files on the VM, and how to deploy our changes to another system using a patch file.\par
 
 \bigskip
 
 \noindent\textbf{How did you personally approach the problem?}
 \medskip
 
-\noindent To keep track of which forks were being used, we simply made a global array that would hold a boolean value to indicate whether the fork was in use or not. We also created a struct for each thread that would contain the index of the left fork, the index of the right fork and the name (ID) of the thread. This struct was passed into the thread starting point when calling the pthread\_create() function.\\
 \medskip
-\noindent When the thread starts, it generates a random amount of thinking time and sleeps for that amount of time. Then, it generates a random eating time and checks if the forks adjacent to it are available to start eating. If not, it waits until they are. The thread "eats" for the amount of time specified and when done, it releases the forks for other threads to use.\\
+
+\noindent We approached the problem of changing the noop scheduler to use C-LOOK by first researching how the behavior of the two differed, and how each achieved their behavior by how they added requests to the queue and dispatched them. Seeing that noop merely added new requests to the queue as they came in and dispatched them from the front, the original idea was to change the add function to use insertion sort so that the request queue would be maintained in order by request sector, then add an explicit elevator algoritm to the dispatch function which would service requests in one direction until it reached the end of the queue and then return to the start. However after further analysis we realized that only the first modification would actually be required. If the request adder maintained the queue in sorted order, then the original behavior of the dispatcher of servicing requests from one side of the list would result in the same behavior as the elevator naturally with no new code needed. This is because the default behavior of the dispatcher determines its list's next and previous nodes from a designated sentinal node. By doing any list traversing we required through this sentinel the resulting list would maintain the proper context in regard to the requests viewed by the dispatcher.\par
 \medskip
-\noindent Each time the forks array is about to experience a read or write, a global mutex is locked to prevent any race conditions. If the mutex is already locked, then the thread will wait until available according to POSIX implementation.\\
+
+\medskip
+
+\noindent The desired change in behavior was achieved by modifying the additions of new requests to the queue in the add\_request function. Instead of always just adding the request to the end, now the function traverses through the list past all the pending requests with a sector number lower than the sector of the request it is adding. It stops when the next request's sector is higher than the new one, backs up one element and adds the new request after that previous position, resulting in a sorted queue. If, while traversing the list of requests, it happens that the sector it is checking has suddenly become smaller than the sector of the next request this indicates that the loop has checked each request in the queue and is about to circle back to the other end, which means the sector of the new request is smaller than all others in the list and it should be added to the front.\par
+
+\bigskip
 
 \noindent\textbf{How did you ensure your solution was correct?}
 \medskip
 
-\noindent We ensured that our implementation was correct by printing all the actions of each thread directly to standard output. That way, we can clearly see who is thinking or eating and for how long. Furthermore, we print out the state of each fork (available or in use). Finally, we also print thinking times and eating times.\\
 \medskip
+
+\noindent We ensured the new behavior was correct by adding a printk statement to the request add function and one to the disptach function which send the sector numbers being added and dispatched to a log file. Then we compiled our scheduler and set it to be the VM's default. We ran a script on the VM that randomly generates a series of I/O requests so the affected sectors are not in order, then checked the contents of the log. We saw that the sector numbers for the adds were jumbled, but they were dispatched in order. This shows that our function is working as intended, sorting requests as it adds them to the queue so that it dispatches all in one direction.\par
 
 \bigskip
 
 \noindent\textbf{What did you learn?}
 \medskip
 
-\noindent During this assignment, I learned how to properly pass variables when creating a thread. Although only a single variable of type (void *) can be passed, a structure can be created and typecasted into a void pointer which lets us pass in more arguments.  Furthermore, the argument and return type of the function need to be explicitly defined as void pointer.\\
-\noindent Another thing I learned is that the memset() function throws out the 'volatile' tag if being used on a volatile variable. I kept using memset() but made sure the compiler optimizations were disabled (just in case) since we are working with a few global variables.\\
-\noindent Finally, I learned that it is a good habit to also lock mutexes when reading a shared variable, otherwise you might be reading some wrong information. It's hard to predict when the data will change, and it's safer to freeze the state of critical variables when reading multiple of them so that they are in the same ``time state".\\
+\medskip
+
+\noindent We learned how the different I/O schedulers operate, both in concept and in practice, the behavior of various elevator algorithms and the bennefits of their differences, and how to modify a scheduler's behavior to change the order in which it stores and services requests. We also necessarily learned about various kernel concepts in order to achieve this, including how linked lists are represented and interacted with, and how to compile and apply modifications to kernel files.\par\pagebreak
+
+\section{Concurrency Assignment}
 \bigskip
+
+\noindent\textbf{What do you think the main point of this assignment is?}
+\medskip
+
+\medskip
+
+\noindent The main point of the assignment was to gain more experience with dealing with potential race conditions and how to allocate processing time to different threads. To deal with with race conditions we were expected to write a semaphore implementation or to use mutexes to make sure critical variables are only being manipulated by a single thread at a time. This assignment was also about giving unique information to different threads, as each had to be aware which fork was to the "left" and "right" of each thread.\par
+
+\bigskip
+
+\noindent\textbf{How did you personally approach the problem?}
+\medskip
+
+\medskip
+
+\noindent To keep track of which forks were being used we made a global array that would hold a boolean value to indicate whether the fork was in use or not. We also created a struct for each thread that would contain the index of the left fork, the index of the right fork, and the name (ID) of the thread. This struct was passed into the thread starting point when calling the \texttt{pthread\_create()} function.\par
+\medskip
+
+\medskip
+
+\noindent When the thread starts, it generates a random amount of thinking time and sleeps for that amount of time. Then, it generates a random eating time and checks if the forks adjacent to it are available to start eating. If not, it waits until they are. The thread "eats" for the amount of time specified and when done it releases the forks for other threads to use.\par
+\medskip
+
+\medskip
+
+\noindent Each time the forks array is about to experience a read or write, a global mutex is locked to prevent any race conditions. If the mutex is already locked, then the thread will wait until available according to POSIX implementation.\par
+
+\bigskip
+
+\noindent\textbf{How did you ensure your solution was correct?}
+\medskip
+
+\medskip
+
+\noindent We ensured that our implementation was correct by printing all the actions of each thread directly to standard output so we can clearly see who is thinking or eating and for how long. Furthermore, we print out the state of each fork (available or in use). Finally, we also print thinking times and eating times. We ensured there was never deadlock or starvation by letting the program run for over an hour and observing that all five threads continued functioning as expected the whole time.\par
+
+\bigskip
+
+\noindent\textbf{What did you learn?}
+\medskip
+
+\medskip
+
+\noindent We learned how to properly pass variables when creating a thread. Although only a single variable of type \texttt{(void *)} can be passed, a structure can be created and typecast into a void pointer which lets us pass in more arguments. Furthermore, the argument and return type of the function need to be explicitly defined as void pointer.\par
+\medskip
+
+\medskip
+
+\noindent We also learned that the \texttt{memset()} function throws out the 'volatile' tag if being used on a volatile variable. I kept using \texttt{memset()} but made sure the compiler optimizations were disabled (just in case) since we are working with a few global variables.\par
+\medskip
+
+\medskip
+
+\noindent Finally, we learned that it is a good habit to also lock mutexes when reading a shared variable, otherwise you might be reading some wrong information. It's hard to predict when the data will change, and it's safer to freeze the state of critical variables when reading so that they are in the same "time state".\par\pagebreak
 
 \section{Version Control Log}
 \bigskip
 
 \noindent\begin{tabular}{l l l}\textbf{Detail} & \textbf{Author} & \textbf{Description}\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/6fc0cad45a2a515f54c120fa6d411cbb62a0eed5}{6fc0cad} & DSchroederOSU & Initial commit\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/237aed09afe1e61e9421f419164f4d41387adddd}{237aed0} & DSchroederOSU & Added assignment 1 folder and starter file\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/2c475d7e15d1a54406c275a2a27c5df472c46ded}{2c475d7} & DSchroederOSU & added concurrency 1 file\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/4126204c49cd2e10090eb4d6bd3183bc23c94648}{4126204} & DSchroederOSU & working on concurrency1.c. made a skeleton of the project\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/d862edec54dd0eb51bdde6e26337315a2675d434}{d862ede} & DSchroederOSU & progress, got rdrand to work\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/a134adaeeff0b0ebc7bc662d809edc973ab6f841}{a134ada} & DSchroederOSU & finished concurrency logic with two threads\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/7096e2f214d8f164dcf02c58d8924f903281e867}{7096e2f} & DSchroederOSU & DONE I THINK\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/29c5440b4d14c3656d11c907e8794f6f08d98897}{29c5440} & DSchroederOSU & This works for n threads, there was a bug that would not clear the buffer space once consumed\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/c6ed2db4aab53f542abd8a00c05c9cf7953d9712}{c6ed2db} & ozarowib & recitation program\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/ce1d4cd2a712b1dfed27d304539fd552d15c4c6c}{ce1d4cd} & DSchroederOSU & added second random generator\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/870a6cf75e9cf205425b40b0fd90a21bece56299}{870a6cf} & DSchroederOSU & Merge branch 'master' of https://github.com/DSchroederOSU/CS444-Group\_11\_05\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/17fa4d7daa607f5a8466d4c854083fe763728c40}{17fa4d7} & Daniel Schroeder & works on os-class\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/8efe18126d63f4c3156da70cb6e8d6f3bb95dcf6}{8efe181} & Daniel Schroeder & test\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/f86076889a02b98fd55cc73c537e49ce93315ea4}{f860768} & DSchroederOSU & fixed argc\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/63f1ea3079fb2044a5fd16f4f60ed0afcecbca13}{63f1ea3} & Daniel Schroeder & tex progress\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/e3916b0f556dc4093d8689662850a7ac1a0a3e71}{e3916b0} & Daniel Schroeder & idk\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/bafbb7390e8525a17d2ad32ccd003c800ed0b4f0}{bafbb73} & Daniel Schroeder & ahaha\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/d8ae437d3f4dffe4287eab3471225d489f16af0a}{d8ae437} & ozarowib & conformed to class style guide\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/c7bf34a5a0bdc36bfc9815bdf012847cb9b6b3da}{c7bf34a} & ozarowib & IEEEtran working, updated Makefile\\\hline\end{tabular}
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/31d0e499089bc16ec0f1a8651c6579b882fe3837}{31d0e49} & ozarowib & HW2 preparation\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/d76f94b4ef4e153d4a4082e754008b003cbcb8fc}{d76f94b} & Luke Morrison & luke's philosophers\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/6ecb0b1be6e85c16b4d50d2c492c10fb3598a1d2}{6ecb0b1} & Luke Morrison & luke philosophers\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/8fe1537eedfae5e846f6cb43d280fc8f716fc7d0}{8fe1537} & Luke Morrison & howto for changing scheduler\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/1858a4b72e56d55cf51047d145d37da8924d0a95}{1858a4b} & DSchroederOSU & fixed concurrency\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/fe2fee9cb7be6a8dc4f24a05b72d855ab6f14d2e}{fe2fee9} & DSchroederOSU & added tex and make\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/f1cc0bee6c166599c52da86c7462076456200697}{f1cc0be} & Luke Morrison & cleanup + fix issues\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/3b97f026eb869e0905fb8d1b09213294b9f629d6}{3b97f02} & Luke Morrison & test for IO scheduler\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/a4abfb8d116f312257ec679de7d846a52eec9281}{a4abfb8} & Luke Morrison & added command line arguments\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/b1e7d32a4b99257f3570ea84c4e2a08c60eb89e1}{b1e7d32} & DSchroederOSU & fixed concurrency\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/df9f80af0d69e84ff3f2b052b8af192c2340c0d5}{df9f80a} & DSchroederOSU & tex file and concurrency work\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/93ea155de2ddeeb5360af8ec1df1ad7b1b315a10}{93ea155} & DSchroederOSU & adding tex file\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/2fdcd23f98fb16f5f5cc05d36e1e46708aaf2463}{2fdcd23} & DSchroederOSU & working on code in Latex file\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/8df401398a214f996bbdd6e5ef42407e2f5d33b5}{8df4013} & ozarowib & conformed to class style\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/38ad76e091720598addf73749757dffbc01ea642}{38ad76e} & DSchroederOSU & added code to tex file\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/dc6e9301c617451dcba6073b38c9c5a406482b20}{dc6e930} & DSchroederOSU & Merge branch 'master' of https://github.com/DSchroederOSU/CS444-Group\_11\_05\\\hline\end{tabular}
 \bigskip
 
 \section{Work Log}
 \bigskip
 
 \begin{itemize}
-\item Brian and Daniel created group directory on os-class at recitation April 11th at 11:00am
-\item Brian ran script for setting folder permissions on Friday April 14th
-\item Daniel and Brian met in OSU Library at 1:50 pm on Monday April 17th. Worked until 3:30pm on initial code and write-up document
-\item Throughout Wednesday April 19th Daniel developed the initial version of the homework concurrency program while Brian wrote the delayed concurrency program from Tuesday's recitation; Brian reviewed Daniel's code Wednesday evening
-\item Brian and Daniel met afternoon of Thursday April 20th to review and complete concurrency1.c code; found compile errors and rdrand error when run on os-class
-\item Daniel and Brian implemented mt19937 function into concurrency1.c evening of April 20th so random numbers could be generated on os-class and did final debugging
-\item Throughout Friday April 21st Daniel and Brian worked on the \LaTeX\ Makefile and formatting
-\item Brian and Daniel finished the assignment write-up in a Google Doc
-\item Brian revised the concurrency1.c code to follow the class style guidelines
+\item Brian copied noop-iosched.c to sstf-iosched.c in the /block directory
+\item Brian researched schedulers and elevator algorithms, started kernel assignment
+\item Group completed the concurrency program
+\item Luke wrote a python script for generating I/O to test new scheduling algorithm
+\item Daniel added .tex and Makefile to the project repository
+\item Group continued work and research on the kernel assignment
+\item Luke and Brian implemented final fixes in sstf-iosched.c
+\item Group finished the assignment write-up in a Google Doc
 \item Brian transferred the content from the Google Doc write-up to the \LaTeX\ file
-\item Brian added IEEEtran.cls file to directory so proper formatting could be applied
-\item Daniel and Brian pushed final changes to GitHub and prepared tarball for submission on TEACH
+\item Group pushed final changes to GitHub and prepared tarball for submission on TEACH
 \end{itemize}
 
 \end{document}
