--- a/Assignment3/Assignment3.tex
+++ b/Assignment3/Assignment3.tex
@@ -140,7 +140,7 @@ This document is a summary of Assignment 3 for CS 444 Operating Systems II at Or
 
 \medskip
 
-\noindent **ADD STUFF***
+\noindent We learned how to exclude multiple threads from interfering in the critical section of our program. There was a set of requirements for exclusion based on each thread, so designing a program that implemented mutexes and exclusion for very specific conditions was new and interesting.  
 \medskip
 
 
