--- a/Assignment3/Assignment3.tex
+++ b/Assignment3/Assignment3.tex
@@ -35,7 +35,7 @@
   urlcolor = red,
   pdfauthor = {\name},
   pdfkeywords = {cs444},
-  pdftitle = {CS 444 Assignment III: I/O Elevators},
+  pdftitle = {CS 444 Assignment III: Encrypted Block Device},
   pdfsubject = {CS 444 Assignment 3},
   pdfpagemode = UseNone
 }
@@ -64,7 +64,7 @@ This document is a summary of Assignment 3 for CS 444 Operating Systems II at Or
 
 \medskip
 
-\noindent For our Encrypted Block Device implementation, we used a pre-established sbd.c driver example from (\href{http://blog.superpat.com/2010/05/04/a-simple-block-driver-for-linux-kernel-2-6-31/}{driver}) as a basis for the encryption module. From there we implemented data encryption through...
+\noindent For our Encrypted Block Device implementation, we used a pre-established sbd.c driver example from (\href{http://blog.superpat.com/2010/05/04/a-simple-block-driver-for-linux-kernel-2-6-31/}{driver}) as a basis for the encryption module. From there we implemented data encryption through use of the functions provided by the kernel crypto API.
 
 \bigskip
 
@@ -73,7 +73,7 @@ This document is a summary of Assignment 3 for CS 444 Operating Systems II at Or
 
 \medskip
 
-\noindent The point of this assignment was to learn how to use an API from the Linux kernel that has poor documentation and design an encrypted block driver module through examples and outside resources.
+\noindent The point of this assignment was to learn how to use an API from the Linux kernel that has poor documentation and design an encrypted block driver module through combining information gathered from examples and outside resources we could find.
 \bigskip
 
 \noindent\textbf{How did you personally approach the problem?}
@@ -81,12 +81,7 @@ This document is a summary of Assignment 3 for CS 444 Operating Systems II at Or
 
 \medskip
 
-\noindent We used an sbd.c implementation of a block driver we found that was written to work for Linux 3.x kernels. After looking through the cryptoloop.c code and researching block driver encryption, we ***add encryption***
-\medskip
-
-\medskip
-
-\noindent We aimed to create a filesystem on our encrypted driver that took a parameter value to be used as the encryption key and encrypt any writes made to the driver and decrypt any reads. 
+\noindent We used an sbd.c implementation of a block driver we found that was updated to work for Linux 3.x kernels. After looking through the cryptoloop.c code and researching block driver encryption, we pieced together how to use the crypto API from various sources and examples online and added encryption around the driver's write function and decryption around the read function.
 
 \bigskip
 
@@ -95,7 +90,7 @@ This document is a summary of Assignment 3 for CS 444 Operating Systems II at Or
 
 \medskip
 
-\noindent After designing our sbd.c driver, we added it to the .config file with a "-m" flag to compile the module onto our kernel. Inside the kernel terminal we used the insmod command to install the our sbd module. We then created a file system on the module with ``mkfs -t ext2 /dev/\textless dev-name\textgreater'' and mounted it with ``mount -t ext2 /dev/\textless dev-name\textgreater /mnt'' for read/write abilities. From here, we manipulated the filesystem and used a series of printk's to ensure that the data being written and read was encrypted with the key command parameter passed in.
+\noindent After designing our sbd.c driver, we added it to the .config file with a "\texttt{-m}" flag to compile the module onto our kernel. Inside the kernel terminal we used the insmod command to load our sbd module. We then created a file system on the module with "\texttt{mkfs -t ext2 /dev/\textless dev-name\textgreater}" and mounted it with "\texttt{mount -t ext2 /dev/\textless dev-name\textgreater /mnt}" for read/write abilities. From here, we manipulated the filesystem by writing and reading test files and used a series of \texttt{printk} statements in the dirver code to ensure that the data being written and read was encrypted and decrypted with the key command parameter that was passed in.
 
 \bigskip
 
@@ -104,8 +99,10 @@ This document is a summary of Assignment 3 for CS 444 Operating Systems II at Or
 
 \medskip
 
-\noindent We learned how to add driver into the /driver/block directory in our kernel and compile it to be used by the kernel. We also leaned how kernel drivers are created and the code behind the I/O operations performed by the driver. 
-***Add stuff about encryption***
+\noindent We learned how to add a driver into the \texttt{/driver/block} directory in our kernel and compile it and how to load it for use by the kernel. We also leaned how kernel drivers are created and the code behind the I/O operations performed by the driver. We learned how to use an API through studying examples when documentation is lacking, and specifically how to implement the crypto API to use AES encryption on filesystem reads and writes.
+
+\bigskip
+
 \section{Concurrency Assignment}
 \bigskip
 
@@ -114,7 +111,7 @@ This document is a summary of Assignment 3 for CS 444 Operating Systems II at Or
 
 \medskip
 
-\noindent The main point of this concurrency assignment was to implement a solution for a Categorial Mutual Exclusion problem. This problem called for three different kinds of threads: inserter threads, searcher threads, and deleter threads. Each type of thread needed to have exclusive access to a commonly shared struct link list and manipulate list items.
+\noindent The main point of this concurrency assignment was to implement a solution for a Categorial Mutual Exclusion problem. This problem called for three different kinds of threads: inserter threads, searcher threads, and deleter threads. Each type of thread needed to have exclusive access to a commonly shared linked list and manipulate the list items.
 
 \bigskip
 
@@ -123,7 +120,7 @@ This document is a summary of Assignment 3 for CS 444 Operating Systems II at Or
 
 \medskip
 
-\noindent For this concurrency assignment we had 3 types of threads that all had exclusive access to a static linked list. Multiple searches could occur at once, but had a mutex for control over a NUMBER\_OF\_SEARCHERS variable that incremented and decremented as searchers started and finished their operations. Inserted threads invoke the inserter/deleter mutex that ensures inserters exclude deleter threads and other inserter threads. Lastly, deleter threads invoke the searcher/deleter mutex and a PTHREAD\_CONDITION that communicates with searchers to give searchers and deleters exclusive access to the linked list. Once all the threads where locking and performing concurrently, we added sleep(1) at the end of ever thread's critical section so the print statements in the console were very clear when the program was running. We assigned different ANSI\_COLOR schemes for the different thread types, and printed the linked list after each operation.
+\noindent For this concurrency assignment we had 3 types of threads that all had exclusive access to a static linked list. Multiple searches could occur at once, but had a mutex for control over a \texttt{NUMBER\_OF\_SEARCHERS} variable that incremented and decremented as searchers started and finished their operations. Inserted threads invoke the inserter/deleter mutex that ensures inserters exclude deleter threads and other inserter threads. Lastly, deleter threads invoke the searcher/deleter mutex and a \texttt{PTHREAD\_CONDITION} that communicates with searchers to give searchers and deleters exclusive access to the linked list. Once all the threads were locking and performing concurrently, we added \texttt{sleep(1)} at the end of every thread's critical section so the print statements in the console were clear when the program was running. We assigned different \texttt{ANSI\_COLOR} schemes for the different thread types to make them easier to distinguish and printed the elements in the linked list after each operation for visual confirmation of the changes being made.
 
 \bigskip
 
@@ -132,7 +129,7 @@ This document is a summary of Assignment 3 for CS 444 Operating Systems II at Or
 
 \medskip
 
-\noindent We added various printf statements in our code when a thread was blocked, or when a thread was inserting, deleting, searching...etc. We printed the program flow onto the console and printed the linked list after any operation was performed to show how the list was changing.
+\noindent We added various \texttt{printf} statements in our code when a thread was blocked, or when a thread was inserting, deleting, searching, etc. We printed the program flow in the console and printed the linked list after any operation was performed to show how the list was changing.
 \bigskip
 
 \noindent\textbf{What did you learn?}
@@ -147,23 +144,18 @@ This document is a summary of Assignment 3 for CS 444 Operating Systems II at Or
 \section{Version Control Log}
 \bigskip
 
-\noindent\begin{tabular}{l l l}\textbf{Detail} & \textbf{Author} & \textbf{Description}\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/31d0e499089bc16ec0f1a8651c6579b882fe3837}{31d0e49} & ozarowib & HW2 preparation\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/d76f94b4ef4e153d4a4082e754008b003cbcb8fc}{d76f94b} & Luke Morrison & luke's philosophers\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/6ecb0b1be6e85c16b4d50d2c492c10fb3598a1d2}{6ecb0b1} & Luke Morrison & luke philosophers\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/8fe1537eedfae5e846f6cb43d280fc8f716fc7d0}{8fe1537} & Luke Morrison & howto for changing scheduler\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/1858a4b72e56d55cf51047d145d37da8924d0a95}{1858a4b} & DSchroederOSU & fixed concurrency\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/fe2fee9cb7be6a8dc4f24a05b72d855ab6f14d2e}{fe2fee9} & DSchroederOSU & added tex and make\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/f1cc0bee6c166599c52da86c7462076456200697}{f1cc0be} & Luke Morrison & cleanup + fix issues\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/3b97f026eb869e0905fb8d1b09213294b9f629d6}{3b97f02} & Luke Morrison & test for IO scheduler\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/a4abfb8d116f312257ec679de7d846a52eec9281}{a4abfb8} & Luke Morrison & added command line arguments\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/b1e7d32a4b99257f3570ea84c4e2a08c60eb89e1}{b1e7d32} & DSchroederOSU & fixed concurrency\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/df9f80af0d69e84ff3f2b052b8af192c2340c0d5}{df9f80a} & DSchroederOSU & tex file and concurrency work\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/93ea155de2ddeeb5360af8ec1df1ad7b1b315a10}{93ea155} & DSchroederOSU & adding tex file\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/2fdcd23f98fb16f5f5cc05d36e1e46708aaf2463}{2fdcd23} & DSchroederOSU & working on code in Latex file\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/8df401398a214f996bbdd6e5ef42407e2f5d33b5}{8df4013} & ozarowib & conformed to class style\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/38ad76e091720598addf73749757dffbc01ea642}{38ad76e} & DSchroederOSU & added code to tex file\\\hline
-\href{https://github.com/DSchroederOSU/CS444-Group\_11\_05/commit/dc6e9301c617451dcba6073b38c9c5a406482b20}{dc6e930} & DSchroederOSU & Merge branch 'master' of https://github.com/DSchroederOSU/CS444-Group\_11\_05\\\hline\end{tabular}
+\begin{tabular}{l l l}\textbf{Detail} & \textbf{Author} & \textbf{Description}\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group_11_05/commit/efa97c8a531581b74d351c5c3f0f8b1f13540455}{efa97c8} & Luke Morrison & c3\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group_11_05/commit/7d73654979eb7198995a959c292dd2062401b464}{7d73654} & Luke Morrison & edited c3\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group_11_05/commit/c976d8184cf0397b6f7128df89ca1d29ebc5f086}{c976d81} & Luke Morrison & module howto + c3 update\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group_11_05/commit/1a667dbf3174f73e60390bb5b52e5872f4527904}{1a667db} & DSchroederOSU & tex file update\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group_11_05/commit/4aa1af6a9d78818c90452ab3a39b933259228a2a}{4aa1af6} & Luke Morrison & final c3.c\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group_11_05/commit/cbaab575cd530eb94a5e13746725d8393ca07735}{cbaab57} & Luke Morrison & Pushing the final c3.c file\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group_11_05/commit/7dfb158f2585339b66bd87b04ddf70f9a8e191d3}{7dfb158} & ozarowib & added print list after insertion and deletion\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group_11_05/commit/652b24b7d0412bb5b3044c9d4aa1fa3fcc6c8f1d}{652b24b} & Luke Morrison & adding to back of list now\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group_11_05/commit/dfa0770241a97e5de391907bd1da8dfb18efc8ef}{dfa0770} & Luke Morrison & now using singly linked list\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group_11_05/commit/03fde718e9793c36da5b8276f019b9c6ac7fcd5b}{03fde71} & ozarowib & minor code cleanup, for class style\\\hline
+\href{https://github.com/DSchroederOSU/CS444-Group_11_05/commit/4ba9e226bc34720e009644e7625ad443ef06c8fb}{4ba9e22} & DSchroederOSU & added thread id's\\\hline\end{tabular}
 \bigskip
 
 \section{Work Log}
