conc what we learned

--- a/Assignment3/Assignment3.tex
+++ b/Assignment3/Assignment3.tex
@@ -137,7 +137,7 @@ This document is a summary of Assignment 3 for CS 444 Operating Systems II at Or
 
 \medskip
 
-\noindent We learned how to exclude multiple threads from interfering in the critical section of our program. There was a set of requirements for exclusion based on each thread, so designing a program that implemented mutexes and exclusion for very specific conditions was new and interesting.  
+\noindent We learned how to exclude multiple threads from interfering in the critical section of our program. There was a set of requirements for exclusion based on each thread, so designing a program that implemented mutexes and exclusion for very specific conditions was new and interesting. We also had neat techniques for printing our our linked list and tracking any manipulations that happened throughout the program.
 \medskip
 
 
